--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "node-sass": "^4.13.0",
+    "pretty": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -13,8 +15,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.3.1",
-    "redux": "^4.0.5",
-    "node-sass": "^4.13.0"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
