--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "controlmoneyapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nurai1.github.io/controlmoneyapp/build",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -24,6 +25,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
+    "serve": "^11.3.2",
     "typescript": "^3.9.7"
   },
   "scripts": {
