--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "eslintIgnore": ["build/"],
   "private": true,
-  "homepage": "https://nurai1.github.io/controlmoneyapp/build",
+  "homepage": "https://nurai1.github.io/controlmoneyapp",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
