--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "controlmoneyapp",
   "version": "0.1.0",
   "eslintIgnore": ["build/"],
+  "homepage": "https://nurai1.github.io/controlmoneyapp/build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
