--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "controlmoneyapp",
   "version": "0.1.0",
-  "eslintIgnore": ["build/"],
   "homepage": "https://nurai1.github.io/controlmoneyapp/build",
+  "eslintIgnore": [
+    "build/"
+  ],
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +18,7 @@
     "@types/react-router-dom": "^5.1.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.13.0",
     "pretty": "^2.0.0",
     "react": "^16.12.0",
@@ -33,7 +36,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
